--- a/src/app/personalizar/Personalizar.css
+++ b/src/app/personalizar/Personalizar.css
@@ -1,10 +1,10 @@
 .customer {
     background-color: rgb(255, 255, 255);
-
+    border-radius: 5%;
     height: 700px;
-    
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     text-align: left;
     margin: 20px;
     margin-left: 0px;
@@ -12,4 +12,10 @@
 
 .customer label {
     padding: 20px;
+}
+.Options-per{
+    display: flex;
+    flex-direction:column ;
+    margin-top: 20px;
+    margin-left: 20px;
 }
