--- a/src/app/personalizar/Personalizar.css
+++ b/src/app/personalizar/Personalizar.css
@@ -19,3 +19,9 @@
     margin-top: 20px;
     margin-left: 20px;
 }
+.modelo{
+
+    background: white;
+    height: 500px;
+    border-radius: 5%;
+}
