--- a/src/app/personalizar/Personalizar.css
+++ b/src/app/personalizar/Personalizar.css
@@ -26,5 +26,29 @@
     
 }
 .opciones{
+    display: flex;
+    flex-direction: column;
     margin-right: 10px ;
+    background: white;
+    border-radius: 5%;
+    height: 500px;
+    width: 60vh;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+
+}
+.perso{
+
+    font-size: 2rem;
+    padding: 0%;
+    margin-top: 10px;
+}
+.modelo{
+
+    background: white;
+    
+    border-radius: 5%;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+    
+
+    
 }
